@@ -14,6 +14,56 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -82,6 +132,22 @@ name|search
 operator|.
 name|spell
 operator|.
+name|LevensteinDistance
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spell
+operator|.
 name|SpellChecker
 import|;
 end_import
@@ -99,22 +165,6 @@ operator|.
 name|spell
 operator|.
 name|StringDistance
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|spell
-operator|.
-name|LevensteinDistance
 import|;
 end_import
 
@@ -187,46 +237,6 @@ operator|.
 name|core
 operator|.
 name|SolrResourceLoader
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Arrays
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collection
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
 import|;
 end_import
 
@@ -380,6 +390,42 @@ argument_list|(
 name|INDEX_DIR
 argument_list|)
 expr_stmt|;
+comment|//If indexDir is relative then create index inside core.getDataDir()
+if|if
+condition|(
+name|indexDir
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+operator|!
+operator|new
+name|File
+argument_list|(
+name|indexDir
+argument_list|)
+operator|.
+name|isAbsolute
+argument_list|()
+condition|)
+block|{
+name|indexDir
+operator|=
+name|loader
+operator|.
+name|getDataDir
+argument_list|()
+operator|+
+name|File
+operator|.
+name|separator
+operator|+
+name|indexDir
+expr_stmt|;
+block|}
+block|}
 name|sourceLocation
 operator|=
 operator|(
