@@ -20,6 +20,46 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -176,9 +216,9 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|util
+name|spelling
 operator|.
-name|AbstractSolrTestCase
+name|IndexBasedSpellChecker
 import|;
 end_import
 
@@ -190,39 +230,9 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|spelling
-operator|.
-name|IndexBasedSpellChecker
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
 name|util
 operator|.
-name|Collection
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|HashMap
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
+name|AbstractSolrTestCase
 import|;
 end_import
 
@@ -2294,6 +2304,186 @@ name|Exception
 name|e
 parameter_list|)
 block|{      }
+block|}
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+DECL|method|testRelativeIndexDirLocation
+specifier|public
+name|void
+name|testRelativeIndexDirLocation
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrCore
+name|core
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+decl_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|args
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+name|CommonParams
+operator|.
+name|Q
+argument_list|,
+literal|"test"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+name|CommonParams
+operator|.
+name|QT
+argument_list|,
+literal|"spellCheckCompRH"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_BUILD
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+name|SpellCheckComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|SolrQueryRequest
+name|req
+init|=
+operator|new
+name|LocalSolrQueryRequest
+argument_list|(
+name|core
+argument_list|,
+operator|new
+name|MapSolrParams
+argument_list|(
+name|args
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|File
+name|indexDir
+init|=
+operator|new
+name|File
+argument_list|(
+name|core
+operator|.
+name|getDataDir
+argument_list|()
+operator|+
+name|File
+operator|.
+name|separator
+operator|+
+literal|"spellchecker1"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"spellcheckerIndexDir was not created inside the configured value for dataDir folder as configured in solrconfig.xml"
+argument_list|,
+name|indexDir
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|indexDir
+operator|=
+operator|new
+name|File
+argument_list|(
+name|core
+operator|.
+name|getDataDir
+argument_list|()
+operator|+
+name|File
+operator|.
+name|separator
+operator|+
+literal|"spellchecker2"
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"spellcheckerIndexDir was not created inside the configured value for dataDir folder as configured in solrconfig.xml"
+argument_list|,
+name|indexDir
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|indexDir
+operator|=
+operator|new
+name|File
+argument_list|(
+name|core
+operator|.
+name|getDataDir
+argument_list|()
+operator|+
+name|File
+operator|.
+name|separator
+operator|+
+literal|"spellchecker3"
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"spellcheckerIndexDir was not created inside the configured value for dataDir folder as configured in solrconfig.xml"
+argument_list|,
+name|indexDir
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 comment|// TODO: add more tests for various spelling options
 block|}
